# PipewireSimpleConfigurator

./: .clang-format  CMakeLists.txt  ConfigManager.h  Main.qml  README.md  SimplePipewireConfigurator.desktop  main.cpp
.github/workflow/: build.yml
